{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 11,
  "lineage": "920aa80a-1a76-5f05-783a-ec4110bb855b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "audrey_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:763237209150:vpc/vpc-02759c42cf9200182",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ee5ce8fe5d6d3bf9",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-00eb1623be4894092",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "001-AudreyMelhy-vpc"
                ]
              },
              {
                "name": "tag:environment",
                "values": [
                  "dev"
                ]
              },
              {
                "name": "tag:id",
                "values": [
                  "001"
                ]
              }
            ],
            "id": "vpc-02759c42cf9200182",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057bde84621aa19ce",
            "owner_id": "763237209150",
            "tags": {
              "Name": "001-AudreyMelhy-vpc",
              "environment": "dev",
              "id": "001",
              "owner": "AudreyMelhy",
              "phase": "vpc_module"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:763237209150:security-group/sg-0cfa3032c8ac5158a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cfa3032c8ac5158a",
            "ingress": [],
            "name": "001-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "763237209150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-001-dev-sg",
              "Owner": " AudreyMelhy",
              "cloudProvider": "aws",
              "createBy": "Terraform",
              "environment": "dev",
              "id": "001",
              "project": "",
              "resource": "jenkins-master"
            },
            "tags_all": {
              "Name": "bastion-001-dev-sg",
              "Owner": " AudreyMelhy",
              "cloudProvider": "aws",
              "createBy": "Terraform",
              "environment": "dev",
              "id": "001",
              "project": "",
              "resource": "jenkins-master"
            },
            "timeouts": null,
            "vpc_id": "vpc-02759c42cf9200182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:763237209150:security-group/sg-0c97581455823f833",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c97581455823f833",
            "ingress": [],
            "name": "001-dev-jenkins-sg",
            "name_prefix": "",
            "owner_id": "763237209150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-001-dev-sg",
              "Owner": " AudreyMelhy",
              "cloudProvider": "aws",
              "createBy": "Terraform",
              "environment": "dev",
              "id": "001",
              "project": "",
              "resource": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-001-dev-sg",
              "Owner": " AudreyMelhy",
              "cloudProvider": "aws",
              "createBy": "Terraform",
              "environment": "dev",
              "id": "001",
              "project": "",
              "resource": "jenkins-master"
            },
            "timeouts": null,
            "vpc_id": "vpc-02759c42cf9200182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4012440011",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfa3032c8ac5158a",
            "security_group_rule_id": "sgr-0e0b606c1bcfa3aea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2401862709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cfa3032c8ac5158a",
            "security_group_rule_id": "sgr-0ba6a705ab63762c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3303623341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-0b86390423ae0136a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1919096600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-0d69699b2e7ac44c6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2837614181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-0dc7c619b1e163571",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2817199375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-0e5dfd81780c9010f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1069753866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-0c07737c4393e95e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8,
            "id": "sgrule-663185878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0c97581455823f833",
            "security_group_rule_id": "sgr-06e7dbda20f39cd65",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_vpc.audrey_vpc"
          ]
        }
      ]
    }
  ]
}